--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,12 +14,15 @@ input[type ="text"]
 
 button {
 
-    background-color: brown;
+    background-color:blue;
     color: white;
     padding: 10px 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#results = {
-    
+#results  {
+    background-color:blue;
+    color: white;
+    padding: 10px 10px;
+    font-family: Arial, Helvetica, sans-serif;   
 }
